--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -11,7 +11,7 @@ services:
     environment:
       - NODE_ENV=production
       - MONGO_USER=${MONGO_USER}
-      - MONGO_PASSWORD={MONGO_PASSWORD}
+      - MONGO_PASSWORD=${MONGO_PASSWORD}
     command: node index.js
   mongo:
     environment:
